BUG: 279084

Problem: Ruby uses keywords to define folding blocks. This keywords
act a little different then special characters used in C.
Solution: m_virtualColumn was introduced for the startNodes